pkt-fe::corporate user details disable and organization attachment UI, review name directive

--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-personal/user-personal.component.html
@@ -1,6 +1,6 @@
 <kt-portlet>
     <kt-portlet-body>
-        <div class="container">
+        <div class="">
             <form action="" [formGroup]="personalForm">
                 <div *ngIf="(customerDetails.moduleId == 3 && customerDetails.userType === 'Individual') || customerDetails.moduleId == 1"
                     class="row justify-content-center kt-margin-t-30">
@@ -414,7 +414,8 @@
                                 <div class="row">
                                     <div class="col-6" [class.offset-4]="images.constitutionsDeed.length == 1"
                                         *ngFor="let img of images.constitutionsDeed, index as idx">
-                                        <div class="img-container">
+                                        <div class="img-container"
+                                            [class.ml-auto]="images.constitutionsDeed.length == 2 && idx == 0">
                                             <img *ngIf="!isPdf(img.URL)" class="fetched-image" [src]="img.URL" alt=""
                                                 (click)="preview(img.URL, idx)">
                                             <img src="../../../../../assets/media/icons/cancel.svg" alt=""
@@ -439,7 +440,8 @@
                                 <div class="row">
                                     <div class="col-6" [class.offset-4]="images.gstCertificate.length == 1"
                                         *ngFor="let img of images.gstCertificate, index as idx">
-                                        <div class="img-container">
+                                        <div class="img-container"
+                                            [class.ml-auto]="images.gstCertificate.length == 2 && idx == 0">
                                             <img *ngIf="!isPdf(img.URL)" class="fetched-image" [src]="img.URL" alt=""
                                                 (click)="preview(img.URL, idx)">
                                             <img src="../../../../../assets/media/icons/cancel.svg" alt=""
