--- a/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/lead-management/lead-management.component.html
@@ -139,11 +139,11 @@
                 <ng-container matColumnDef="actions">
                     <mat-header-cell *matHeaderCellDef>Actions</mat-header-cell>
                     <mat-cell *matCellDef="let lead">
-                        <div *ngIf="lead.status.id !== 1" [ngStyle]="{'display': 'inherit'}">
+                        <div *ngIf="lead.status.id != 1 && lead.status.id != 2" [ngStyle]="{'display': 'inherit'}">
                             <div class="kt-pointer" (click)="editLead(lead)" class="kt-pointer"
                                 *ngxPermissionsOnly="['leadManagmentEdit']">Edit</div>
                         </div>
-                        <div *ngIf="lead.status.id == 1" [ngStyle]="{'display': 'inherit'}">
+                        <div *ngIf="lead.status.id == 1 || lead.status.id == 2" [ngStyle]="{'display': 'inherit'}">
                             <div>-</div>
                         </div>
                     </mat-cell>
