nov-fe::scheme changes

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.scss
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.scss
@@ -1,7 +1,8 @@
 :host {
     .min-vh-60{
-        min-height: 89vh;
-        overflow: hidden;
+        min-height: 80vh;
+        max-height: 80vh;
+        overflow: scroll;
     }
     .heading {
         font-weight: 600;
