--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/add-scheme/add-scheme.component.html
@@ -60,13 +60,22 @@
                         <div class="row kt-margin-b-15 kt-padding-l-15"
                             *ngIf="fillingForm.get('schemeType').value == 'secured'">
 
-                            <div class="offset-3 position-relative kt-padding-l-10">
-                                <label class="custom-checkbox ">
-                                    <span class="label-checkbox">TOP UP Allowed</span>
-                                    <input type="checkbox" (change)="setAsTopUpAllowed($event.target.checked)"
-                                        formControlName="isTopUp">
-                                    <span class="checkmark top-0"></span>
-                                </label>
+                            <div class="col offset-3">
+                                <div class="position-relative kt-padding-l-10">
+                                    <label class="custom-checkbox ">
+                                        <span class="label-checkbox">TOP UP Allowed</span>
+                                        <input type="checkbox" (change)="setAsTopUpAllowed($event.target.checked)"
+                                            formControlName="isTopUp">
+                                        <span class="checkmark top-0"></span>
+                                    </label>
+                                </div>
+                            </div>
+
+                            <div class="col">
+                                <mat-slide-toggle formControlName="isUnsecuredSchemeMapped"
+                                    (change)="displayUnsecuredScheme()">
+                                    Map Unsecured Scheme
+                                </mat-slide-toggle>
                             </div>
                         </div>
 
@@ -249,15 +258,14 @@
                             </div>
                         </div>
 
-                        <div *ngIf="fillingForm.get('schemeType').value == 'secured'" class="row kt-margin-b-15">
+                        <div *ngIf="fillingForm.get('isUnsecuredSchemeMapped').value" class="row kt-margin-b-15">
                             <div class="col-3 form-label">
                                 <label class="kt-padding-l-10 mandatory"> Unsecured Scheme </label>
                             </div>
                             <div class="col-9">
                                 <select name="" id="" class="form-control" formControlName="unsecuredSchemeId"
-                                    (change)="changeUnsecuredScheme($event)"
                                     [class.isError]="fillingForm.get('unsecuredSchemeId').touched && fillingForm.get('unsecuredSchemeId').invalid">
-                                    <option value="" [selected]="true" [disabled]="true">Select Unsecured Scheme
+                                    <option [value]=null selected="true">Select Unsecured Scheme
                                     </option>
                                     <option *ngIf="unsecuredSchemes.length == 0" value="" [disabled]="true">No Unsecured
                                         Schemes Found
