--- a/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-settings/loan-scheme/loan-scheme.component.html
@@ -12,7 +12,7 @@
                 <label class="text-color font-weight-bold h-v-text-center m-0" *ngIf="scheme.schemes.length==0">No
                     Schemes
                     Available</label>
-                <div class="row kt-padding-10 kt-padding-b-25"
+                <div class="row kt-padding-10 kt-padding-b-25" [id]="'s' + schemeDeatils?.id"
                     *ngFor="let schemeDeatils of scheme.schemes, index as idx">
 
                     <div class="col-2 from-style">
@@ -29,7 +29,11 @@
                         <div class="col-12">
                             <div class="row">
                                 <div class="col">
-                                    <h5>{{ schemeDeatils.schemeName | uppercase}}</h5>
+                                    <h5>{{ schemeDeatils.schemeName | uppercase}} <span class="kt-pointer"
+                                            (click)="scrollToUnsecuredScheme('s'+schemeDeatils.unsecuredSchemeId)"
+                                            *ngIf="schemeDeatils.unsecuredSchemeId">
+                                            {{ ' : ' + schemeDeatils.unsecuredScheme.schemeName | uppercase }}</span>
+                                    </h5>
                                 </div>
                                 <div class="col">
                                     <div class="row pb-2">
@@ -105,8 +109,8 @@
                                     <p>{{schemeDeatils.schemeType | titlecase}}</p>
                                 </div>
                                 <div class="col justify-content-center">
-                                    <p>Maximum % Allowed </p>
-                                    <p>{{schemeDeatils.maximumPercentageAllowed}} %</p>
+                                    <p>RPG </p>
+                                    <p>{{schemeDeatils?.rpg}}</p>
                                 </div>
                                 <div class="col justify-content-center">
                                     <p>Penal Interest</p>
