loan interest calculation done

--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/loan-application-form/loan-application-form.component.html
@@ -36,7 +36,7 @@
                             (finalLoanAmount)="finalLoanAmount($event)" [totalAmt]="totalAmount"
                             [fullAmount]="fullAmount" [details]="customerDetail" [masterAndLoanIds]="masterAndLoanIds"
                             [showButton]="showButton" (accountHolderName)="accountHolder($event)" [ornamentRate]="ornamentRate"
-                            [loanTransfer]=loanTransferdata [disbursed]="disbursed" [partPaymentdata]="partPaymentdata">
+                            [loanTransfer]=loanTransferdata [disbursed]="disbursed" [ornamentDetails]="ornamentDetailsArray" [partPaymentdata]="partPaymentdata">
                         </kt-interest-calculator>
                     </mat-tab>
                     <mat-tab label="Bank Details" [disabled]="disabled[4]">
