--- a/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/kyc-settings/tabs/user-details/user-details.component.html
@@ -216,7 +216,7 @@
 							</label>
 						</div>
 						<div class="col-8">
-							<div class="input-group mb-3">
+							<div class="input-group">
 								<input type="text" class="form-control" placeholder="Select File"
 									aria-label="Recipient's username" aria-describedby="basic-addon2"
 									formControlName="form60" readonly
@@ -239,7 +239,7 @@
 						</div> -->
 					</div>
 
-					<div class="row kt-margin-t-20" *ngIf="controls.panType.value">
+					<div class="row kt-margin-t-10" *ngIf="controls.panType.value">
 						<div class="col offset-4">
 							<div class="img-container" *ngIf="controls.panImg.value">
 								<img *ngIf="!controls.panImg.value" class=""
