--- a/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/repayment/part-release/part-release.component.html
@@ -3,12 +3,12 @@
         <div class="main" id="container">
             <div class="row kt-padding-t-5 kt-margin-b-5">
                 <div class="col font-weight-500">Customer ID</div>
-                <div class="col font-weight-500 th-padding-left">Loan ID</div>
-                <div class="col font-weight-500  padding-right">Loan Amount</div>
+                <div class="col font-weight-500">Loan ID</div>
+                <div class="col font-weight-500">Loan Amount</div>
                 <div class="col font-weight-500">Loan Start Date</div>
                 <div class="col font-weight-500">Loan End Date</div>
                 <div class="col font-weight-500">Tenure</div>
-                <div class="col font-weight-500 th-padding-left">Last Payment Date</div>
+                <div class="col font-weight-500">Last Payment Date</div>
                 <div class="col-2 font-weight-500  th-padding-right">Principal
                     Outstanding
                 </div>
@@ -21,12 +21,12 @@
             <div class="row kt-padding-t0" *ngIf="loanDetails">
                 <div class="col">
                     {{loanDetails.customerLoan.loanPersonalDetail.customerUniqueId}}</div>
-                <div class="col th-padding-left">
+                <div class="col">
                     <div *ngFor="let loan of loanDetails.customerLoan.customerLoan">
                         {{loan.loanUniqueId}}
                     </div>
                 </div>
-                <div class="col padding-right">
+                <div class="col">
                     <div class="" *ngFor="let loan of loanDetails.customerLoan.customerLoan">
                         {{loan.loanAmount}}
                     </div>
@@ -35,7 +35,7 @@
                 </div>
                 <div class="col"> {{loanDetails.customerLoan.loanEndDate | date: 'mediumDate'}}</div>
                 <div class="col">{{loanDetails.customerLoan.tenure}} Months</div>
-                <div class="col th-padding-left">
+                <div class="col">
                     <span
                         *ngIf="loanDetails.lastPayment else blank">{{loanDetails.lastPayment | date: 'mediumDate'}}</span>
                 </div>
