--- a/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
+++ b/gold-admin-frontend/src/app/views/pages/admin/loan-management/top-up/top-up.component.html
@@ -65,7 +65,7 @@
                         <div class="table-div table-responsive kt-padding-t-15">
                             <table class="table outer-border">
                                 <thead>
-                                    <th class="transparent">Eligible TOP UP amount</th>
+                                    <th class="transparent">Eligible TOP UP Amount</th>
                                     <th class="transparent w100">1,20,000</th>
                                     <th class="transparent">Processing Charges</th>
                                     <th class="transparent w100">500</th>
